--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
     "@fortawesome/fontawesome-free": "^6.7.2",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.3.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
